avance de la maquetacion en css

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,13 @@
+*{
+    margin:0;
+    padding:0;  
+    box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
+        
+.container_gen {
+    display: grid;
+    grid-template-columns: 30% 70%;
+}
 .imagenRedonda {
     width:100px;
     height:100px;
@@ -9,3 +19,15 @@
     width:100px;
       
 }    
+.container {
+    padding: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+  
+}
+.card {
+    padding: 10px;
+    background: #000442;
+    color: whitesmoke;
+}
