--- a/src/style.css
+++ b/src/style.css
@@ -2,32 +2,46 @@
     margin:0;
     padding:0;  
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+    font-family: open sans;
 }   
 .container_gen {
     display: grid;
-    grid-template-columns: 30% 70%;
+    grid-template-columns: 100%;
 }
 .imagenRedonda {
+    padding: 3px;
     width:100px;
     height:100px;
     border-radius:50%;
-    border-bottom-color: 2px, white
+    background-position: 50%;
+    display: block;
+    margin: auto;
+    border: 2px solid honeydew;
        
     }
 .logo {
-    width:100px;
+    width: 140px;
+    height: 110px;
       
 }    
 .container {
-    padding: 30px;
+    background-image: url(./img/fondo_pantalla.jpg);
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr ;
     grid-gap: 20px;
+    grid-auto-rows: 350px;
   
 }
 .card {
     padding: 10px;
-    background: #000442;
+    width: 170px;
+    background:rgb(147, 227, 236,0.5);
     color: whitesmoke;
+    border-radius: 5%;
+    border-style: solid;
+    border-width: 2px;
+}
+h1 {
+    background-image: url(./img/fondo_pantalla.jpg);
+    color:  whitesmoke;
 }
