--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
     margin:0;
     padding:0;  
     box-sizing: border-box;
-    font-family: open sans;
+    font-family: open;
 }   
 .container_gen {
     display: grid;
@@ -17,31 +17,82 @@
     display: block;
     margin: auto;
     border: 2px solid honeydew;
+}
+.cont-menu {
+    background: rgb(32, 178, 170);
+}
        
-    }
+    
 .logo {
-    width: 140px;
-    height: 110px;
+    width: 160px;
+    height: 150px;
       
 }    
-.container {
-    background-image: url(./img/fondo_pantalla.jpg);
+.container-card {
+    background-image: url(https://i.pinimg.com/564x/dc/04/d0/dc04d06da80329efe1c5d5693f393d36.jpg);
+    padding: 20px;
     display: grid;
-    grid-template-columns: 1fr 1fr ;
+    grid-template-columns: 1fr 1fr 1fr ;
     grid-gap: 20px;
     grid-auto-rows: 350px;
   
 }
 .card {
-    padding: 10px;
-    width: 170px;
-    background:rgb(147, 227, 236,0.5);
-    color: whitesmoke;
+    width: 35vh;
+    padding: 20px;
+    background: rgb(128, 0, 128, 0.8);
+    color: wheat;
     border-radius: 5%;
-    border-style: solid;
-    border-width: 2px;
+    border: 1px solid;
+    box-shadow: 5px 10px 8px #888888;
+    
+
 }
 h1 {
     background-image: url(./img/fondo_pantalla.jpg);
     color:  whitesmoke;
 }
+.botton {
+    border: write solid 1px;
+    height: 20px;
+    width: 30px;
+    border-radius: 15%;
+    /*float: left;*/
+    padding: 1px 2px;
+    margin: 2px;
+  }
+/*
+@media(max-width:767px){
+    .img-act1{padding: 20px 0 10px 65px}
+    .col-xs-12{width:100%}
+    .col-xs-9{width:75%}
+    .col-xs-8{width:66.66666667%}
+    .col-xs-6{width:50%}
+    .col-xs-4{width:33.33333333%}
+    .col-xs-3{width:25%}
+}
+@media(max-width:1199px) and (min-width:968px){
+    .img-act1{padding: 20px 0 10px 45px}
+    .col-md-12{width:100%}
+    .col-md-6{width:50%}
+    .col-md-9{width:75%}
+    .col-md-4{width:33.33333333%}
+    .col-md-3{width:25%} 
+}
+@media(min-width:1200px){
+    h1{font-size: 38px}
+    h3,h4{padding: 0 0 15px 20px}
+    .img-act1{padding: 20px 0 10px 68px}
+    .box{padding: 20px 0 15px 50px}
+    .col-lg-12{width:100%}
+    .col-lg-9{width:75%}
+    .col-lg-6{width:50%}
+    .col-lg-4{width:33.33333333%}
+    .col-lg-3{width:25%}
+}
+@media screen and (max-width: 800px){
+    #menu {position: fixed;height: 200px;}
+    #characters{margin-inline-start: auto;margin-top: 200px}
+    h2{padding: 50px 0 29px 70px}
+}
+*/
