--- a/src/style.css
+++ b/src/style.css
@@ -1,47 +1,85 @@
 *{
-    margin:0;
-    padding:0;  
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+    text-decoration: none;
     box-sizing: border-box;
-    font-family: open sans;
+    font-family: Open sans;
 }   
-.container_gen {
-    display: grid;
-    grid-template-columns: 100%;
+
+[class*="col-"]{
+    float: left;
+}
+
+.container_gen{
+    position: relative;
+    margin: auto;
+    width: 100%;
+    height: auto;
+}
+.fila {
+    position: relative;
+    margin: auto;
+    width: 100%;
+    height: auto;
+}
+.col-12 {
+    width: 100%;
+    background: red;
 }
 .imagenRedonda {
-    padding: 3px;
     width:100px;
+    padding: 5px;
     height:100px;
     border-radius:50%;
-    background-position: 50%;
     display: block;
     margin: auto;
     border: 2px solid honeydew;
-       
-    }
-.logo {
-    width: 140px;
-    height: 110px;
-      
-}    
+}
+
 .container {
     background-image: url(./img/fondo_pantalla.jpg);
     display: grid;
-    grid-template-columns: 1fr 1fr ;
-    grid-gap: 20px;
-    grid-auto-rows: 350px;
-  
 }
+.menu {
+    background: #808080;
+   
+}
+.logo {
+    width: 70%;
+    height: 50%;
+    display: block;
+    margin: auto;
+      
+}  
 .card {
-    padding: 10px;
-    width: 170px;
+    /*width: 170px;*/
     background:rgb(147, 227, 236,0.5);
     color: whitesmoke;
     border-radius: 5%;
-    border-style: solid;
-    border-width: 2px;
+    /*border-style: solid;*/
+    /*border-width: 2px;*/
 }
-h1 {
-    background-image: url(./img/fondo_pantalla.jpg);
-    color:  whitesmoke;
+
+@media(max-width:767px){
+    .col-xs-12{width: 100%;}
+    .col-xs-6{width: 50%;}
+    .col-xs-4{width: 33.33333333%;}
 }
+
+@media(min-width:1200px){
+    .col-lg-12{width: 100%;}
+    .col-lg-9{width: 75%;}
+    .col-lg-4{width: 33.33333333%;}
+    .col-lg-3{width: 25%;}
+}          /*
+        
+        
+        
+          
+        /* }
+        
+        h1 {
+            background-image: url(./img/fondo_pantalla.jpg);
+            color:  whitesmoke;
+        }  */
